tests/checker/diagnostics/0562_functor_opaque_result_operator_mismatch_02.ml.infer.expected
File "0562_functor_opaque_result_operator_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0562_functor_opaque_result_operator_mismatch_02 is not a valid module name.

File "0562_functor_opaque_result_operator_mismatch_02.ml", line 22, characters 8-18:
22 | let _ = Out_beta.y + 2
             ^^^^^^^^^^
Error: The value Out_beta.y has type Out_beta.u = Make_beta(Input_beta).u
       but an expression was expected of type int
